# freely-created-monad

./: .gitignore  CLAUDE.md  README.md
.claude/skills/build-all/: SKILL.md
.claude/skills/review-docs/: SKILL.md
.claude/skills/sync-slides/: SKILL.md
docs/: 01-introduction.md  02-continuations.md  02-reification.md  03-defunctionalization.md  03-free-monad.md  04-free-monad.md  04-freer-monad.md  05-dsl.md  05-free-to-freer.md  06-codensity.md  06-freer-execution.md  07-dsl.md
haskell/: freely-created-monad.cabal
haskell/app/: Main.hs
haskell/src/: Codensity.hs  Continuation.hs  Defunctionalization.hs  Free.hs  Freer.hs
slides/: slides.html  slides.md
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: dsl-example.ts
